# vfpl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  grammar.bnf  grammar.txt  nils.txt  rust-toolchain  test.vfpl  todo.md  toolchain.toml
vfpl_ast_interpreter/: Cargo.toml  README.md
vfpl_ast_interpreter/src/: exec.rs  lib.rs  native.rs  test.rs
vfpl_ast_interpreter/src/snapshots/: vfpl__interpret_ast__test__double_initialize_global_variable.snap  vfpl__interpret_ast__test__initialize_global_variable.snap  vfpl_ast_interpreter__test__double_initialize_global_variable.snap  vfpl_ast_interpreter__test__initialize_global_variable.snap
vfpl_driver/: Cargo.toml  README.md
vfpl_driver/src/: lib.rs
vfpl_lexer/: Cargo.toml  README.md
vfpl_lexer/src/: helper.rs  lib.rs  test.rs  tokens.rs
vfpl_lexer/src/snapshots/: vfpl__lexer__test__all_keywords-11.snap  vfpl__lexer__test__all_keywords-13.snap  vfpl__lexer__test__all_keywords-15.snap  vfpl__lexer__test__all_keywords-16.snap  vfpl__lexer__test__all_keywords-17.snap  vfpl__lexer__test__all_keywords-18.snap  vfpl__lexer__test__all_keywords-19.snap  vfpl__lexer__test__all_keywords-2.snap  vfpl__lexer__test__all_keywords-20.snap  vfpl__lexer__test__all_keywords-22.snap  vfpl__lexer__test__all_keywords-23.snap  vfpl__lexer__test__all_keywords-25.snap  vfpl__lexer__test__all_keywords-28.snap  vfpl__lexer__test__all_keywords-29.snap  vfpl__lexer__test__all_keywords-3.snap  vfpl__lexer__test__all_keywords-32.snap  vfpl__lexer__test__all_keywords-33.snap  vfpl__lexer__test__all_keywords-35.snap  vfpl__lexer__test__all_keywords-37.snap  vfpl__lexer__test__all_keywords-38.snap  vfpl__lexer__test__all_keywords-39.snap  vfpl__lexer__test__all_keywords-43.snap  vfpl__lexer__test__all_keywords-45.snap  vfpl__lexer__test__all_keywords-48.snap  vfpl__lexer__test__all_keywords-5.snap  vfpl__lexer__test__all_keywords-50.snap  vfpl__lexer__test__all_keywords-52.snap  vfpl__lexer__test__all_keywords-53.snap  vfpl__lexer__test__all_keywords-55.snap  vfpl__lexer__test__all_keywords-57.snap  vfpl__lexer__test__all_keywords-58.snap  vfpl__lexer__test__all_keywords-7.snap  vfpl__lexer__test__all_keywords-8.snap  vfpl__lexer__test__all_keywords-9.snap  vfpl__lexer__test__all_keywords.snap  vfpl__lexer__test__alphabetical_char_in_number.snap  vfpl__lexer__test__decimal.snap  vfpl__lexer__test__decimal_with_alphabetical_char.snap  vfpl__lexer__test__decimal_with_leading_zeros.snap  vfpl__lexer__test__decimal_with_minus_and_leading_zeros.snap  (+25 more)
vfpl_parser/: Cargo.toml  README.md  grammar.bnf
vfpl_parser/src/: error.rs  helper.rs  lib.rs  parser.rs  test.rs
vfpl_parser/src/snapshots/: vfpl__parse__test__add_stmt.snap  vfpl__parse__test__break_stmt.snap  vfpl__parse__test__call_no_args.snap  vfpl__parse__test__call_single_arg.snap  vfpl__parse__test__call_two_args.snap  vfpl__parse__test__different_literals.snap  vfpl__parse__test__divide_number.snap  vfpl__parse__test__equal_expr.snap  vfpl__parse__test__fn_decl_no_params_empty_body.snap  vfpl__parse__test__fn_decl_single_param_emtpy_body.snap  vfpl__parse__test__fn_decl_two_param_emtpy_body.snap  vfpl__parse__test__greater_equal_than_expr.snap  vfpl__parse__test__ident_ty.snap  vfpl__parse__test__if_empty_body_complex_cond.snap  vfpl__parse__test__if_multi_stmt_body.snap  vfpl__parse__test__if_single_stmt_body.snap  vfpl__parse__test__init_variable_string.snap  vfpl__parse__test__less_equal_than_expr.snap  vfpl__parse__test__less_than_expr.snap  vfpl__parse__test__literal_expr.snap  (+63 more)
(+152 files in other folders)
