[workspace]
members = [
    "vfpl_ast",
    "vfpl_ast_interpreter",
    "vfpl_driver",
    "vfpl_error",
    "vfpl_global",
    "vfpl_lexer",
    "vfpl_parser",
]

[package]
name = "vfpl"
version = "0.1.0"
edition = "2021"
authors = ["Nilstrieb", "C0RR1T_"]
repository = "https://github.com/Nilstrieb/vfpl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.2"
peekmore = { version = "1.0.0", features = ["smallvec"] }
fastrand = "1.5.0"

[dev-dependencies]
insta = "1.8.0"

[profile.release]
lto = "fat"