[workspace]
members = [
    "vfpl_ast",
    "vfpl_ast_interpreter",
    "vfpl_driver",
    "vfpl_error",
    "vfpl_global",
    "vfpl_lexer",
    "vfpl_parser",
]

[package]
name = "vfpl"
version = "0.2.0" # hope that this is aligned
edition = "2021"
authors = ["Nilstrieb", "C0RR1T_"]
repository = "https://github.com/Nilstrieb/vfpl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfpl_ast_interpreter = { path = "./vfpl_ast_interpreter" }
vfpl_driver = { path = "./vfpl_driver" }
vfpl_error = { path = "./vfpl_error" }
vfpl_global = { path = "./vfpl_global" }
vfpl_lexer = { path = "./vfpl_lexer" }
vfpl_parser = { path = "./vfpl_parser" }

[dev-dependencies]
insta = "1.8.0"

[profile.release]
lto = "fat"