[package]
name = "vfpl_ast_interpreter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfpl_ast = { path = "../vfpl_ast" }
vfpl_error = { path = "../vfpl_error" }
vfpl_global = { path = "../vfpl_global" }
fastrand = "1.5.0"