[package]
name = "vfpl_lexer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfpl_error = { path = "../vfpl_error" }
vfpl_global = { path = "../vfpl_global" }
fastrand = "1.5.0"
peekmore = { version = "1.0.0", features = ["smallvec"] }
unicode-xid = "0.2.2"

[dev-dependencies]
insta = "1.8.0"